app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: task-service
  namespace: app
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: task-service
          image: task-service:v1       # ← Change this to trigger a canary
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  strategy:
    canary:
      canaryService: task-service-canary
      stableService: task-service-stable
      trafficRouting:
        nginx:
          stableIngress: task-service-ingress   # references ingress.yaml
      steps:
        - setWeight: 20
        - pause: { duration: 30s }             # short for learning; 5-15m in prod
        - analysis:
            templates:
              - templateName: canary-success-rate
        - setWeight: 50
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: canary-success-rate
        - setWeight: 80
        - pause: { duration: 30s }
        - setWeight: 100
