app/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service-canary
  namespace: app
spec:
  selector:
    app: task-service
  ports:
    - port: 80
      targetPort: 8080
