app/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service-stable
  namespace: app
  labels:
    app: task-service
spec:
  selector:
    app: task-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
