app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: task-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-service-stable
                port:
                  number: 80
